# python-pgsql-parser

./: README.md  pyproject.toml  setup.py
.github/: workflow.yml
.github/workflows/: python-publish.yml
docs/: index.html  index.md
pgsql_parser/: __init__.py  models.py  parser_base.py  sql_lexer.py  sql_parser.py  sql_query_parser.py  sqlparser.py
tests/: complex_query.sql  pgadmin4_create_table.sql  test_advanced_lexer.py  test_advanced_parser.py  test_pgsql_parser.py
